gcc/testsuite/rust/rustc/ui/macros/macro-missing-delimiters.rs
macro_rules! baz(
    baz => () // { dg-error "" "" { target *-*-* } }
);

fn main() {
    baz!(baz);
}

